apps/kan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kan
  namespace: kan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kan
  template:
    metadata:
      labels:
        app: kan
    spec:
      containers:
        - name: kan
          image: ghcr.io/kanbn/kan:latest
          ports:
            - name: http
              containerPort: 3000
